namespace MarsRover
{
  internal class Directions
  {
  }
}