namespace SDK.Models
{
  /// <summary>
  /// An enum for the four cardinal compass points.
  /// </summary>
  public enum CompassPoint
  {
    N,
    E,
    S,
    W
  }
}
